[project]
name = "todo-cli-app"
version = "0.1.0"
description = ""
authors = [
    {name = "setaahp",email = "seta.hp2610@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "todo_cli_app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
